Boolean bug with operand type: collection #82089

Closed
opened 2020-10-26 14:03:37 +01:00 by Sergey · 8 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71

Blender Version
Broken: version: 2.91.0 Beta, branch: master, commit date: 2020-10-21 16:17, hash: 7ff6bfd1e0

Short description of error
Bool_bug.gif

Exact steps for others to reproduce the error

  • Create Cube(Collection 1)
  • Create Cube x3 (Collection 2)
  • Add boolean modifier to cube in collection 1
  • Union - fast solver - collection 2 in boolean modifier
  • delete faces in cube(collection 1)

boolean starts to show only the last object in collection 2 like a union.

Bool_Bug.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71 **Blender Version** Broken: version: 2.91.0 Beta, branch: master, commit date: 2020-10-21 16:17, hash: `7ff6bfd1e0` **Short description of error** ![Bool_bug.gif](https://archive.blender.org/developer/F9100317/Bool_bug.gif) **Exact steps for others to reproduce the error** - Create Cube(Collection 1) - Create Cube x3 (Collection 2) - Add boolean modifier to cube in collection 1 - Union - fast solver - collection 2 in boolean modifier - delete faces in cube(collection 1) boolean starts to show only the last object in collection 2 like a union. [Bool_Bug.blend](https://archive.blender.org/developer/F9100323/Bool_Bug.blend)
Author

Added subscriber: @Drakosha

Added subscriber: @Drakosha

Added subscribers: @howardt, @mano-wii

Added subscribers: @howardt, @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Thanks for the report, I can confirm.
The problem only occurs in the Fast mode.

Thanks for the report, I can confirm. The problem only occurs in the `Fast` mode.
Howard Trickey self-assigned this 2020-11-01 00:13:47 +01:00
Member

The cube that the modifier is applied to has no geometry. This must be a special case that the Fast code fails on. I will fix this.

The cube that the modifier is applied to has no geometry. This must be a special case that the Fast code fails on. I will fix this.

This issue was referenced by c271600101

This issue was referenced by c271600101a2b5e491315f4dfa7fe89e4a4d5b1a

This issue was referenced by 4158b7f674

This issue was referenced by 4158b7f674bcc05308b50da917798edfdddab469
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#82089
No description provided.